master index thumb test

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Square Open Source</title>
+    <title>yathish1618</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
     <link href="/yathish1618.github.io/assets/base.css" media="screen" rel="stylesheet" type="text/css" />
@@ -50,29 +50,39 @@
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">android-times-square</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/android-times-square" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Standalone Android widget for picking a single date from a calendar view.</p>
+                  <h4 class="menu-item-name">lung-breaker</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/lung-breaker" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/lung-breaker" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A small game based on brick game. Smoking is injurious to health!</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/android-times-square.jpg" />
+                  <img src="/repo_images/PonyDebugger.jpg" />
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">assertj-android</h4>
-                  <span class="menu-item-price"><a href="http://square.github.io/assertj-android/" target="_blank">Website</a> &middot; <a href="https://github.com/square/assertj-android" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">A set of AssertJ helpers geared toward testing Android.</p>
+                  <h4 class="menu-item-name">random-pi</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/random-pi" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/random-pi" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A game celebrating pi day and the randomness of pi.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/assertj-android.jpg" />
+                  <img src="/repo_images/spacecommander.jpg" />
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">dagger</h4>
-                  <span class="menu-item-price"><a href="http://square.github.io/dagger/" target="_blank">Website</a> &middot; <a href="https://github.com/square/dagger" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">A fast dependency injector for Android and Java.</p>
+                  <h4 class="menu-item-name">t-rex-mario</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-mario" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A hybrid game briging together Chrome's t-rex and super mario bros!</p>
+                </div>
+                <div class="menu-item-image has-meta-content">
+                  <img src="/repo_images/spacecommander.jpg" />
+                </div>
+              </li>
+			  <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name">water-is-dangerous</h4>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/water-is-dangerous/" target="_blank">View</a> &middot; <a href="https://yathish1618.github.io/water-is-dangerous" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A static page explaining the gullability against mainstream junk science. A case against conditioning and ill form of inferring facts.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/dagger.jpg" />
@@ -80,31 +90,21 @@
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">otto</h4>
-                  <span class="menu-item-price"><a href="http://square.github.io/otto/" target="_blank">Website</a> &middot; <a href="https://github.com/square/otto" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">An enhanced Guava-based event bus with emphasis on Android support.</p>
+                  <h4 class="menu-item-name">india-religion-data</h4>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/pollexor/" target="_blank">View</a> &middot; <a href="https://yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A visualisation of census data released by Indian Government focusing on religious diversity in India.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/otto.jpg" />
-                </div>
-              </li>
-              <li class="menu-item">
-                <div class="menu-item-info">
-                  <h4 class="menu-item-name">picasso</h4>
-                  <span class="menu-item-price"><a href="http://square.github.io/picasso/" target="_blank">Website</a> &middot; <a href="https://github.com/square/picasso" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">A powerful image downloading and caching library for Android</p>
-                </div>
-                <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/picasso.jpg" />
+                  <img src="/repo_images/pollexor.jpg" />
                 </div>
               </li>
               </ol>
               <ol class="menu-category-list">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">leakcanary</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/leakcanary" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">A memory leak detection library for Android and Java.</p>
+                  <h4 class="menu-item-name">t-rex-runner</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-runner" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">The original t-rex game implemented in Chrome when offline.</p>
                 </div>
               </li>
               </ol>
@@ -114,9 +114,9 @@
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">PonyDebugger</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/PonyDebugger" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Remote network and data debugging for your native iOS app using Chrome Developer Tools</p>
+                  <h4 class="menu-item-name">lung-breaker</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/lung-breaker" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/lung-breaker" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A small game based on brick game. Smoking is injurious to health!</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/PonyDebugger.jpg" />
@@ -124,20 +124,19 @@
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">spacecommander</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/spacecommander" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Commit fully-formatted Objective-C as a team without even trying.</p>
+                  <h4 class="menu-item-name">random-pi</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/random-pi" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/random-pi" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A game celebrating pi day and the randomness of pi.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/spacecommander.jpg" />
                 </div>
               </li>
-			  
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">spacecommander</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/spacecommander" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Commit fully-formatted Objective-C as a team without even trying.</p>
+                  <h4 class="menu-item-name">t-rex-mario</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-mario" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A hybrid game briging together Chrome's t-rex and super mario bros!</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/spacecommander.jpg" />
@@ -147,9 +146,9 @@
               <ol class="menu-category-list">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">Aardvark</h4>
-                  <span class="menu-item-price"><a href="https://github.com/square/Aardvark" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Aardvark is a library that makes it dead simple to create actionable bug reports.</p>
+                  <h4 class="menu-item-name">t-rex-runner</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-runner" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">The original t-rex game implemented in Chrome when offline.</p>
                 </div>
               </li>
               </ol>
@@ -159,19 +158,19 @@
               <ol class="menu-category-list has-images">
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">dagger</h4>
-                  <span class="menu-item-price"><a href="http://square.github.io/dagger/" target="_blank">Website</a> &middot; <a href="https://github.com/square/dagger" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">A fast dependency injector for Android and Java.</p>
+                  <h4 class="menu-item-name">water-is-dangerous</h4>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/water-is-dangerous/" target="_blank">View</a> &middot; <a href="https://yathish1618.github.io/water-is-dangerous" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A static page explaining the gullability against mainstream junk science. A case against conditioning and ill form of inferring facts.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
-                  <img src="/repo_images/dagger.jpg" />
+                  <img src="assets/water-is-dangerous.png" />
                 </div>
               </li>
               <li class="menu-item">
                 <div class="menu-item-info">
-                  <h4 class="menu-item-name">pollexor</h4>
-                  <span class="menu-item-price"><a href="http://square.github.io/pollexor/" target="_blank">Website</a> &middot; <a href="https://github.com/square/pollexor" target="_blank">GitHub</a></span>
-                  <p class="menu-item-description">Java client for the Thumbor image service which allows you to build URIs in an expressive fashion using a fluent API.</p>
+                  <h4 class="menu-item-name">india-religion-data</h4>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/pollexor/" target="_blank">View</a> &middot; <a href="https://yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">A visualisation of census data released by Indian Government focusing on religious diversity in India.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="/repo_images/pollexor.jpg" />
