--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title>yathish1618</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
 
-    <link href="/yathish1618.github.io/assets/base.css" media="screen" rel="stylesheet" type="text/css" />
+    <link href="assets/base.css" media="screen" rel="stylesheet" type="text/css" />
     <link rel="shortcut icon" href="/assets/favicon.ico" />
 
-    <script src="/yathish1618.github.io/assets/modernizr.js" type="text/javascript"></script>
+    <script src="assets/modernizr.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="wrapper">
