--- a/water-is-dangerous/index.html
+++ b/water-is-dangerous/index.html
@@ -60,7 +60,7 @@
     <div id="fullpage">
       <section class="vertical-scrolling">
         <h2>How Gullible are We?</h2>
-        <h3>To show how conditioned we have become to alarmists practicing junk science and spreading fear of everything in our environment, a student, in his project, urged people to sign a petition demanding strict control or total elimination of the chemical <span>dihydrogen monoxide</span>.</h3>
+        <h3>To show how conditioned we have become to alarmists practicing junk science and spreading fear of everything in our environment, a student, in his project, urged people to sign a petition demanding strict control or total elimination of the chemical <span>dihydrogen monoxide</span>.<br>Most people didn't know that dihydrogen monoxide is nothing but regular water (H<sub>2</sub>O). Given below are 7 actual facts about water that seem to indicate it's a highly dangeours chemical.</sub></h3>
         <div class="scroll-icon">
           <p>Get conditioned!</p>
           <a href="#01" class="icon-up-open-big"></a>
