--- a/water-is-dangerous/index.html
+++ b/water-is-dangerous/index.html
@@ -60,7 +60,7 @@
     <div id="fullpage">
       <section class="vertical-scrolling">
         <h2>How Gullible are We?</h2>
-        <h3>To show how conditioned we have become to alarmists practicing junk science and spreading fear of everything in our environment, a 14 year old student, in his project, urged people to sign a petition demanding strict control or total elimination of the chemical <span>dihydrogen monoxide</span>.<br><br>Most people didn't know that dihydrogen monoxide is nothing but regular water (H<sub>2</sub>O).<br><br> Given below are 7 actual facts about water that seem to indicate it's a highly dangerous chemical.</sub></h3>
+        <h3>To show how conditioned we have become to alarmists practicing junk science and spreading fear of everything in our environment, a 14 year old student, in his project, urged people to sign a petition demanding strict control or total elimination of the chemical <span>dihydrogen monoxide</span>.<br><br>Most people didn't know that dihydrogen monoxide is nothing but regular water (H<sub>2</sub>O).<br><br> Given below are 7 actual facts about water that seem to convince it's a highly dangerous chemical.</sub></h3>
         <div class="scroll-icon">
           <p>Get conditioned!</p>
           <a href="#01" class="icon-up-open-big"></a>
@@ -102,8 +102,7 @@
           <h3>50 people were asked if they supported a ban of the chemical (after conditioning them with above facts)..<br>43 said yes, 6 were undecided, and only one knew that the chemical was <span>water</span>.</h3> 
         </div>
         <div class="horizontal-scrolling">
-          <h3>The student behind this was at Eagle Rock Junior High and he won first prize at the Greater Idaho Falls Science Fair April 26 1997, for this.<br>It's a classic example in explaining rhetorical tactic or critical thinking.</h3>
-          <p class="end">Read more on this at <a href="https://en.wikipedia.org/wiki/Dihydrogen_monoxide_hoax">Wiki</a> or <a href="http://www.snopes.com/science/dhmo.asp">Snopes</a></p>
+          <h3>The student behind this was at Eagle Rock Junior High and he won first prize at the Greater Idaho Falls Science Fair April 26 1997, for this.<br>It's a classic example in explaining rhetorical tactic or critical thinking.<br><br>Read more on this at <a href="https://en.wikipedia.org/wiki/Dihydrogen_monoxide_hoax">Wiki</a> or <a href="http://www.snopes.com/science/dhmo.asp">Snopes</a</h3>
         </div>
 		<div class="scroll-icon-down">
           <a href="#begin" class="icon-up-open-big icon-down-open-big"></a>
