uploaded marketing expained

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			  <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">water-is-dangerous</h4>
-                  <span class="menu-item-price"><a href="http://yathish1618.github.io/water-is-dangerous/" target="_blank">View</a> &middot; <a href="https://yathish1618.github.io/water-is-dangerous" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/water-is-dangerous/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/water-is-dangerous" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A static page explaining the gullability against mainstream junk science. A case against conditioning and ill form of inferring facts.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -61,7 +61,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">random-pi</h4>
-                  <span class="menu-item-price"><a href="https://yathish1618.github.io/random-pi" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/random-pi" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/random-pi" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/random-pi" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A game celebrating pi day and the randomness of pi.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -71,7 +71,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">india-religion-data</h4>
-                  <span class="menu-item-price"><a href="http://yathish1618.github.io/pollexor/" target="_blank">View</a> &middot; <a href="https://yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/pollexor/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A visualisation of census data released by Indian Government focusing on religious diversity in India.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -81,7 +81,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">t-rex-mario</h4>
-                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-mario" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-mario" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A hybrid game briging together Chrome's t-rex and super mario bros!</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -91,7 +91,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">lung-breaker</h4>
-                  <span class="menu-item-price"><a href="https://yathish1618.github.io/lung-breaker" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/lung-breaker" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/lung-breaker" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/lung-breaker" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A small game based on brick game. Smoking is injurious to health!</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -100,10 +100,17 @@
               </li>
               </ol>
               <ol class="menu-category-list">
+			  <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name">you-see-a-gorgeous-girl</h4>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/you-see-a-gorgeous-girl/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/you-see-a-gorgeous-girl" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">Marketing terminology explained using funny anaology of spotting a gorgeous girl at a party and proposing.</p>
+                </div>
+              </li>
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">t-rex-runner</h4>
-                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-runner" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-runner" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">The original t-rex game implemented in Chrome when offline.</p>
                 </div>
               </li>
@@ -115,7 +122,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">lung-breaker</h4>
-                  <span class="menu-item-price"><a href="https://yathish1618.github.io/lung-breaker" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/lung-breaker" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/lung-breaker" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/lung-breaker" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A small game based on brick game. Smoking is injurious to health!</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -125,7 +132,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">random-pi</h4>
-                  <span class="menu-item-price"><a href="https://yathish1618.github.io/random-pi" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/random-pi" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/random-pi" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/random-pi" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A game celebrating pi day and the randomness of pi.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -135,7 +142,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">t-rex-mario</h4>
-                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-mario" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-mario" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A hybrid game briging together Chrome's t-rex and super mario bros!</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -147,7 +154,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">t-rex-runner</h4>
-                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-runner" target="_blank">Play</a> &middot; <a href="https://yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-runner" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">The original t-rex game implemented in Chrome when offline.</p>
                 </div>
               </li>
@@ -159,7 +166,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">water-is-dangerous</h4>
-                  <span class="menu-item-price"><a href="http://yathish1618.github.io/water-is-dangerous/" target="_blank">View</a> &middot; <a href="https://yathish1618.github.io/water-is-dangerous" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/water-is-dangerous/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/water-is-dangerous" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A static page explaining the gullability against mainstream junk science. A case against conditioning and ill form of inferring facts.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -169,11 +176,27 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">india-religion-data</h4>
-                  <span class="menu-item-price"><a href="http://yathish1618.github.io/pollexor/" target="_blank">View</a> &middot; <a href="https://yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/pollexor/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A visualisation of census data released by Indian Government focusing on religious diversity in India.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
                   <img src="assets/india-religion-data.png" />
+                </div>
+              </li>
+              </ol>
+              <ol class="menu-category-list">
+			  <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name">you-see-a-gorgeous-girl</h4>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/you-see-a-gorgeous-girl/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/you-see-a-gorgeous-girl" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">Marketing terminology explained using funny anaology of spotting a gorgeous girl at a party and proposing.</p>
+                </div>
+              </li>
+              <li class="menu-item">
+                <div class="menu-item-info">
+                  <h4 class="menu-item-name">t-rex-runner</h4>
+                  <span class="menu-item-price"><a href="https://yathish1618.github.io/t-rex-runner" target="_blank">Play</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/t-rex-runner" target="_blank">GitHub</a></span>
+                  <p class="menu-item-description">The original t-rex game implemented in Chrome when offline.</p>
                 </div>
               </li>
               </ol>
