--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">india-religion-data</h4>
-                  <span class="menu-item-price"><a href="http://yathish1618.github.io/pollexor/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/india-religion-data/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A visualisation of census data released by Indian Government focusing on religious diversity in India.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
@@ -176,7 +176,7 @@
               <li class="menu-item">
                 <div class="menu-item-info">
                   <h4 class="menu-item-name">india-religion-data</h4>
-                  <span class="menu-item-price"><a href="http://yathish1618.github.io/pollexor/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
+                  <span class="menu-item-price"><a href="http://yathish1618.github.io/india-religion-data/" target="_blank">View</a> &middot; <a href="https://github.com/yathish1618/yathish1618.github.io/india-religion-data" target="_blank">GitHub</a></span>
                   <p class="menu-item-description">A visualisation of census data released by Indian Government focusing on religious diversity in India.</p>
                 </div>
                 <div class="menu-item-image has-meta-content">
